--- a/CSharp/eShop/eShop/eShop.csproj
+++ b/CSharp/eShop/eShop/eShop.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="cargochain.sdk.csharp" Version="2.0.7" />
     <PackageReference Include="LiteDB" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
