--- a/CSharp/eShop/eShop/Properties/launchSettings.json
+++ b/CSharp/eShop/eShop/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
-    "eShop": {
+    "eShop.Shop": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
