--- a/CSharp/eShop/eShopCarrier/eShop.Carrier.csproj
+++ b/CSharp/eShop/eShopCarrier/eShop.Carrier.csproj
@@ -6,7 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="cargochain.sdk.csharp" Version="2.0.7" />
+    <PackageReference Include="LiteDB" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eShop.Lib\eShop.Lib.csproj" />
   </ItemGroup>
 
 </Project>
