--- a/CSharp/eShop/eShop.Lib/eShop.Lib.csproj
+++ b/CSharp/eShop/eShop.Lib/eShop.Lib.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="cargochain.sdk.csharp" Version="2.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
