Web Hook in Shop

--- a/CSharp/eShop/eShop.Shop/appsettings.json
+++ b/CSharp/eShop/eShop.Shop/appsettings.json
@@ -13,6 +13,7 @@
     "RunAsKey": "UxySFocezPTB8g8VEsaAslIvOmfy3kLb",
     "PortalUrl": "http://localhost:90",
     "ApiUrl": "http://localhost:91",
-    "PublicViewUrl": "http://localhost:92"
+    "PublicViewUrl": "http://localhost:92",
+    "WebHookUrl": "http://localhost:14582/hook"
   }
 }
